--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
+    "koa-bodyparser": "^4.2.0",
     "koa-webpack-middleware": "^1.0.7",
     "node-sass": "^4.9.0",
+    "php-unserialize": "0.0.1",
     "postcss-loader": "^2.1.5",
+    "request-promise": "^4.2.2",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
