--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "koa-route": "^3.2.0",
     "koa-session": "^5.5.0",
     "koa-static": "^4.0.1",
+    "sqlite3": "^4.0.0",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0",
     "vue-server-renderer": "^2.4.2",
