--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,12 @@
 {
   "presets": [
-    ["env", { "modules": false }]
+    ["env", {
+      "modules": false,
+      "targets": {
+        "node": "current"
+      },
+      "debug": true
+    }]
   ],
   "plugins": [
     "syntax-dynamic-import"
