--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.6.0",
     "babel-cli": "^6.26.0",
     "element-ui": "^2.3.8",
     "koa": "^2.3.0",
