--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "rimraf dist && npm run build:client && npm run build:server",
     "build:client": "webpack --config build/webpack.client.config.js --progress --hide-modules",
     "build:server": "webpack --config build/webpack.server.config.js --progress --hide-modules",
+    "dev": "NODE_ENV=dev node server",
     "start": "NODE_ENV=prod npm run build && NODE_ENV=prod pm2 start server.config.js"
   },
   "keywords": [],
